# ig-trading-rest

./: README.md  ig-trading-rest.cabal  stack.yaml
src/Web/IG/Confirms/DealReference/Get/: Version1.hs
src/Web/IG/Confirms/DealReference/Get/Version1/: Request.hs  Response.hs
src/Web/IG/Positions/Otc/Post/: Version2.hs
src/Web/IG/Positions/Otc/Post/Version2/: Request.hs  Response.hs
src/Web/IG/Prices/Epic/Get/: Version3.hs
src/Web/IG/Prices/Epic/Get/Version3/: Request.hs  Response.hs
src/Web/IG/Session/Post/: Version2.hs
src/Web/IG/Session/Post/Version2/: Request.hs  Response.hs
src/Web/IG/Session/RefreshToken/Post/: Version1.hs
src/Web/IG/Session/RefreshToken/Post/Version1/: Request.hs  Response.hs
src/Web/IG/Types/: Account.hs  AccountInfo.hs  AccountType.hs  AffectedDealStatus.hs  Allowance.hs  Deal.hs  DealCondition.hs  DealId.hs  DealStatus.hs  Direction.hs  Environment.hs  Epic.hs  HistoricalPrice.hs  InstrumentType.hs  OrderTimeInForce.hs  PageData.hs  PositionOrderType.hs  PositionStatus.hs  PositionTimeInForce.hs  Price.hs  Resolution.hs  WorkingOrderType.hs
src/Web/IG/WorkingOrders/Otc/Post/: Version2.hs
src/Web/IG/WorkingOrders/Otc/Post/Version2/: Request.hs  Response.hs
